[gd_scene load_steps=3 format=3 uid="uid://blr78jqm4exlb"]

[ext_resource type="PackedScene" uid="uid://c4ydi20x11w0" path="res://Scenes/UI/ui.tscn" id="1_37lfk"]
[ext_resource type="Script" path="res://Scripts/UI/pause.gd" id="2_bbxh2"]

[node name="Pause" instance=ExtResource("1_37lfk")]
script = ExtResource("2_bbxh2")

[node name="Label" type="Label" parent="Panel" index="0"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 192.0
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="Button" parent="Panel" index="1"]
custom_minimum_size = Vector2(170, 64)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.741
anchor_right = 0.5
anchor_bottom = 0.741
offset_left = -80.0
offset_top = -187.392
offset_right = 90.0
offset_bottom = -123.392
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu
"

[node name="Retry" type="Button" parent="Panel" index="2"]
custom_minimum_size = Vector2(170, 64)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.741
anchor_right = 0.5
anchor_bottom = 0.741
offset_left = -80.0
offset_top = -91.392
offset_right = 90.0
offset_bottom = -27.392
grow_horizontal = 2
grow_vertical = 2
text = "Try Again"

[node name="Continue" type="Button" parent="Panel" index="3"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.741
anchor_right = 0.5
anchor_bottom = 0.741
offset_left = -80.0
offset_top = 4.608
offset_right = 90.0
offset_bottom = 68.608
grow_horizontal = 2
grow_vertical = 2
text = "Continue"

[connection signal="pressed" from="Panel/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Panel/Continue" to="." method="_on_continue_pressed"]
